--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1165,6 +1165,12 @@ header .menu .kadence-svg-iconset svg {
   font-size: 30px;
   top: 2px;
 }
+header .menu-item a:hover{
+  color: #0d5957 !important;
+}
+header .site-top-header-wrap .menu-item > .kb-row-layout-wrap , header .site-top-header-wrap .menu-item .kt-row-column-wrap{
+  background-color: #fff !important;
+}
 header.site-header .site-header-row-layout-fullwidth {
   box-shadow: 0px 4px 16px 0px #00000010;
   border-bottom-left-radius: 50px;
@@ -1353,6 +1359,15 @@ header .site-top-header-wrap .site-container {
 
 .esa-letter-furry-friends .experience-box .kt-inside-inner-col:hover{
 	background-color: #0d5957;
+}
+.esa-letter-furry-friends .experience-box .kt-inside-inner-col:hover .experience-icon{
+  display: none;
+}
+.esa-letter-furry-friends .experience-box .kt-inside-inner-col .experience-white-icon{
+  display: none;
+}
+.esa-letter-furry-friends .experience-box .kt-inside-inner-col:hover .experience-white-icon{
+  display: block;
 }
 .esa-letter-furry-friends .experience-box .kt-inside-inner-col:hover .wp-block-kadence-advancedheading{
 	color: #fff;
@@ -2441,6 +2456,9 @@ header .site-top-header-wrap .site-container {
 .pawsitive .pawsitive-faq-section .kt-accordion-pane:has(.kt-accordion-panel.kt-accordion-panel-active) .wp-block-kadence-advancedheading{
   color: #fff !important;
 }
+.pawsitive .pawsitive-faq-section .kt-accordion-panel-active .kt-accordion-panel-inner p {
+  color: #fff !important;
+}
 .pawsitive .pawsitive-faq-section .hidden{
 	display: none !important;
 }
@@ -2499,5 +2517,432 @@ header .site-top-header-wrap .site-container {
 .pawsitive .pawsitive-faq-section .kt-accordion-inner-wrap {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 24px;
+}
+
+.pawsitive .about-esa-tabs-wrapper  .kt-tabs-title-list{
+  max-width: 682px !important;
+  margin: 0px auto;
+  padding: 8px;
+  background: #062D2B;
+  border-radius: 50px;
+  display: grid;
+  justify-content: space-between;
+  gap: 12px;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+
+.pawsitive .about-esa-tabs-wrapper .kt-tabs-title-list .kt-tab-title {
+  justify-content: center !important;
+}
+.pawsitive .about-esa-tabs-wrapper  .kt-tabs-content-wrap{
+  margin-top: 64px;
+}
+.pawsitive .about-esa-tabs-content-wrapper .kb-advanced-slide-inner-wrap{
+  padding: 0px;
+}
+.pawsitive .about-esa-tabs-content-wrapper .splide__list , .pawsitive .about-esa-tabs-content-wrapper .splide__list > .kb-advanced-slide , 
+.pawsitive .about-esa-tabs-content-wrapper .splide__list > .kb-advanced-slide-inner-wrap ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner .wp-block-kadence-column ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner .wp-block-kadence-column > .kt-inside-inner-col{
+  height: 100%;
+}
+
+.pawsitive .esa-letter-testimonial .kt-blocks-testimonial-carousel-item{
+  padding: 0px;
+}
+.pawsitive .esa-letter-testimonial .splide__pagination{
+  display: none;
+}
+
+.pawsitive .pawsitive-banner-wrapper{
+  position: relative;
+}
+
+.pawsitive .pawsitive-image-wrapper{
+  position: absolute;
+  bottom: -151px;
+  right: 80px;
+}
+
+.pawsitive .pawsitive-experience-card .kt-inside-inner-col , .pawsitive .pawsitive-experience-card .kt-inside-inner-col .wp-block-kadence-column , .pawsitive .pawsitive-experience-card .kt-inside-inner-col .wp-block-kadence-column .kt-inside-inner-col{
+  height: 100% !important;
+}
+.pawsitive .pawsitive-experience-card:hover .wp-block-kadence-advancedheading{
+  color: #fff !important;
+}
+
+.pawsitive .esa-cta-section{
+  position: relative;
+}
+.pawsitive .esa-cta-wrapper{
+  max-width: 710px;
+  position: absolute;
+  bottom: 0px;
+  left: 10%;
+}
+
+@media screen and (max-width: 1768px){
+  .pawsitive .pawsitive-banner-wrapper > .kt-inside-inner-col > .wp-block-kadence-column{
+    margin-left: 60px !important;
+  }
+}
+
+@media screen and (max-width: 1710px){
+  .pawsitive .care-team-slider .splide__arrow--prev::before{
+    left: -116px;
+  }
+  .pawsitive .care-team-slider .splide__arrow--next::before{
+    left: 62px;
+  }
+}
+
+@media screen and (max-width: 1630px){
+  .pawsitive .pawsitive-image-wrapper img{
+    max-width: 860px !important;
+  }
+}
+
+@media screen and (max-width: 1614px){
+  .pawsitive .care-team-slider .splide__pagination{
+    display: block !important;
+    bottom: -78px !important;
+    text-align: center;
+  }
+  .pawsitive .care-team-slider .splide__arrows{
+    display: none;
+  }
+  .pawsitive .care-team-card-button {
+    margin-top: 88px !important;
+  }
+}
+
+@media screen and (max-width: 1572px){
+  .pawsitive .esa-cta-wrapper {
+    max-width: 600px;
+    left: 5%;
+}
+.pawsitive .esa-cta-section{
+  margin-top: 190px;
+}
+.pawsitive .make-pet-an-esa-content{
+  max-width: 612px;
+}
+}
+
+@media screen and (max-width: 1536px){
+  .pawsitive .esa-discover-section > .kt-row-column-wrap{
+    gap: 46px !important;
+  }
+}
+
+
+@media screen and (max-width: 1500px){
+  .pawsitive-banner-section > .kt-inside-inner-col{
+    padding-top: 195px !important;
+  }
+}
+
+@media screen and (max-width: 1440px){
+  .pawsitive .about-esa-tabs-wrapper .kb-advanced-slide .wp-block-kadence-column > .kt-inside-inner-col{
+    padding: 14px 14px !important;
+  }
+  .pawsitive .about-esa-tabs-wrapper .kb-advanced-slide-item{
+    margin-right: 28px !important;
+  }
+  .pawsitive .care-team-slider .team-name{
+    font-size: 24px !important;
+  }
+  .pawsitive .care-team-slider .team-content{
+    font-size: 18px !important;
+  }
+}
+
+@media screen and (max-width: 1424px){
+  .pawsitive .pawsitive-image-wrapper img {
+    max-width: 766px !important;
+}
+}
+
+@media screen and (max-width: 1400px){
+  .pawsitive .pawsitive-image-wrapper{
+    right: 50px;
+  }
+}
+
+@media screen and (max-width: 1340px){
+  .pawsitive .pawsitive-banner-section .banner-title{
+    font-size: 62px !important;
+    line-height: 70px !important;
+  }
+}
+
+@media screen and (max-width: 1300px){
+  .pawsitive .pawsitive-banner-wrapper > .kt-inside-inner-col > .wp-block-kadence-column {
+    margin-left: 20px !important;
+}
+.pawsitive .pawsitive-image-wrapper img {
+  max-width: 700px !important;
+}
+.pawsitive-banner-section > .kt-inside-inner-col{
+  padding-bottom: 182px !important;
+}
+.pawsitive .pawsitive-image-wrapper{
+  bottom: -105px;
+}
+}
+
+@media screen and (max-width: 1236px){
+  .pawsitive .esa-cta-wrapper {
+    max-width: 410px;
+    left: 2%;
+}
+}
+
+@media screen and (max-width: 1200px){
+  .pawsitive .pawsitive-banner-section .banner-title {
+    font-size: 42px !important;
+    line-height: 54px !important;
+}
+.pawsitive .pawsitive-banner-section .banner-text{
+  font-size: 18px !important;
+  max-width: 390px !important;
+}
+.pawsitive .pawsitive-image-wrapper img {
+  max-width: 582px !important;
+}
+.pawsitive .pawsitive-image-wrapper {
+  right: 20px;
+}
+}
+
+@media screen and (max-width: 1024px){
+  .pawsitive .pawsitive-image-wrapper img{
+    margin: 0px auto;
+  }
+  .pawsitive .esa-cta-wrapper {
+    max-width: 288px;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: -102px;
+}
+.pawsitive-drawer .sub-menu a{
+  padding: 0px!important;
+}
+.pawsitive-drawer .sub-menu br{
+  display: none !important;
+}
+.pawsitive .make-pet-an-esa-content{
+  margin: 0px auto !important;
+}
+.pawsitive .esa-cta-section {
+  margin-top: 279px;
+}
+  .pawsitive .care-team-slider .care-team-card .kb-advanced-slide > .kb-advanced-slide-inner-wrap{
+    padding: 24px !important;
+  }
+  .pawsitive .care-team-slider .team-name{
+    font-size: 20px !important;
+  }
+  .pawsitive .care-team-slider .team-content {
+    font-size: 16px !important;
+    line-height: 24px !important;
+}
+  .pawsitive-header .site-header-row-layout-fullwidth {
+    box-shadow: unset !important;
+  }
+  .pawsitive-header .site-top-header-wrap{
+    background: #e3ebe4 !important;
+  }
+  .pawsitive-drawer .menu-toggle-close{
+    margin-top: 24px;
+    border-radius: 24px !important;
+    padding: 2px !important;
+    margin-bottom: 24px !important;
+  }
+  .pawsitive-drawer .menu-toggle-close{
+    font-size: 16px !important;
+  }
+  .pawsitive-drawer .drawer-nav-drop-wrap .drawer-sub-toggle{
+    font-size: 28px !important;
+  }
+  .pawsitive-drawer .mobile-navigation ul li a{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+  .pawsitive-drawer .drawer-sub-toggle{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+  .pawsitive .pawsitive-banner-section .banner-title {
+    font-size: 32px !important;
+    line-height: 44px !important;
+    text-align: center;
+  }
+  .pawsitive .pawsitive-banner-section .banner-text {
+    font-size: 16px !important;
+    max-width: 390px !important;
+    margin: 0px auto;
+    text-align: center;
+    margin-top: 16px !important;
+  }
+  .pawsitive .pawsitive-banner-section .kb-buttons-wrap{
+    margin-top: 24px !important;
+  }
+  .pawsitive .experience-wrapper .experience-card-section .kt-has-3-columns{
+    display: flex !important;
+    gap: 24px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .pawsitive-banner-section > .kt-inside-inner-col {
+    padding-top: 140px !important;
+  }
+  .pawsitive .pawsitive-image-wrapper{
+    position: unset;
+  }
+  .pawsitive-banner-section > .kt-inside-inner-col {
+    padding-bottom: 78px !important;
+  }
+  .pawsitive .pawsitive-banner-wrapper > .kt-inside-inner-col > .wp-block-kadence-column{
+    margin-left: 0px !important;
+    max-width: unset !important;
+  }
+  .pawsitive .experience-card-section > .kt-has-3-columns > .wp-block-kadence-column{
+    max-width: 320px !important;
+  }
+  .pawsitive .esa-contains-wrapper > .kt-row-column-wrap{
+    grid-template-columns: 1fr !important;
+  }
+  .pawsitive .esa-contains-wrapper .esa-contain-number {
+    width: 38px;
+    height: 38px;
+    line-height: 25px;
+  }
+  .pawsitive .about-esa-tabs-wrapper .kt-tabs-content-wrap {
+    margin-top: 36px;
+}
+.pawsitive .about-esa-tabs-content-wrapper .kb-advanced-slide-inner-wrap{
+  min-height: unset !important;
+}
+.pawsitive .about-esa-tabs-wrapper .kb-splide .splide__pagination__page{
+  height: 16px;
+  width: 16px;
+  background-color: #57918F !important;
+}
+.pawsitive .about-esa-tabs-wrapper .kb-splide .splide__pagination__page.is-active{
+  background-color: #fff !important;
+}
+.pawsitive .about-esa-tabs-wrapper ul.splide__pagination.splide__pagination{
+  bottom: -40px !important;
+}
+.pawsitive .esa-letter-testimonial .splide__pagination{
+  bottom: -40px !important;
+}
+.pawsitive .esa-letter-testimonial .splide__pagination li button.is-active{
+  background-color: #0D5957 !important;
+}
+.pawsitive .esa-letter-testimonial .splide__pagination li button{
+  background-color: #E3EBE4 !important;
+}
+.pawsitive .discover-wellnesswag-content{
+  padding: 24px 24px;
+  background: #E3EBE4;
+  border-radius: 20px;
+  box-shadow: 0px 1px 2px 0px #00000047; 
+}
+.pawsitive .pawsitive-faq-section .wp-block-kadence-pane{
+  border-radius: 24px !important;
+  padding: 24px 24px !important;
+}
+.pawsitive .pawsitive-faq-section .kt-blocks-accordion-header .kt-blocks-accordion-title-wrap{
+  font-size: 24px;
+  line-height: 32px;
+}
+.pawsitive .pawsitive-faq-section .kt-accordion-panel-inner p{
+  font-size: 16px;
+  line-height: 26px;
+}
+.pawsitive .pawsitive-faq-section ul li{
+  font-size: 16px;
+  line-height: 24px;
+}
+.pawsitive .faq-content-wrapper{
+  order: 2;
+}
+.pawsitive .pawsitive-faq-image{
+  order: 1;
+}
+}
+
+@media screen and (max-width: 767px){
+  .pawsitive .about-esa-tabs-content-wrapper .splide__list , .pawsitive .about-esa-tabs-content-wrapper .splide__list > .kb-advanced-slide , 
+.pawsitive .about-esa-tabs-content-wrapper .splide__list > .kb-advanced-slide-inner-wrap ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner .wp-block-kadence-column ,
+.pawsitive .about-esa-tabs-content-wrapper .splide__list .kb-advanced-slide-inner .wp-block-kadence-column > .kt-inside-inner-col{
+  height: unset;
+}
+.pawsitive .pawsitive-image-wrapper img{
+  margin: 0px auto;
+  max-width: 320px !important;
+}
+.pawsitive .esa-letter-testimonial-section .kt-blocks-testimonial-carousel-item .kt-testimonial-item-wrap{
+  margin: 0px auto;
+}
+.pawsitive .about-esa-tabs-content-wrapper .kb-advanced-slide-inner-wrap{
+  max-width: 320px;
+  margin: 0px auto;
+}
+.pawsitive .esa-cta-wrapper{
+  top: -104px;
+}
+}
+
+@media screen and (max-width: 575px){
+  .pawsitive .esa-cta-wrapper{
+    top: -102px;
+    z-index: -1;
+    bottom: unset !important;
+  }
+  .pawsitive .esa-cta-section {
+    margin-top: 258px;
+}
+}
+
+@media screen and (max-width: 480px){
+  .pawsitive .esa-cta-wrapper {
+    top: -100px;
+  }
+  .pawsitive .esa-cta-section {
+    margin-top: 236px;
+}
+}
+@media screen and (max-width: 424px){
+  .pawsitive .esa-cta-wrapper {
+    top: -94px;
+  }
+  .pawsitive .esa-cta-section {
+    margin-top: 230px;
+}
+}
+@media screen and (max-width: 404px){
+  .pawsitive .esa-cta-wrapper {
+    top: -90px;
+  }
+  .pawsitive .esa-cta-section {
+    margin-top: 200px;
+}
+}
+@media screen and (max-width: 380px){
+  .pawsitive .esa-cta-wrapper {
+    top: -60px;
+  }
+  .pawsitive .esa-cta-section {
+    margin-top: 200px;
+}
 }
